--- a/.github/workflows/update_host.yml
+++ b/.github/workflows/update_host.yml
@@ -26,6 +26,9 @@ env:
   CFHOST: cfhost
   CFHOST_BAK: cfhost_bak
   CFHOSTJSON: cfhost.json
+  HOST: host
+  HOST_BAK: host_bak
+  HOSTJSON: host.json
   SCRIPT: v2
   PROJECT: v1
   ENTRY: _worker.js
@@ -48,35 +51,40 @@ jobs:
       - id: s1
         name: get cfhost, merge, backup
         run: |
-          ret=`curl -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" "$CF_KV_API/$CFHOST"`
-          if [[ "$ret" == *error* ]]; then
-            echo $ret
-          elif [ ! -z "$ret" ] && [ ! "$ret" = "[]" ]; then
-            echo $ret|tr -d '[]'|sed -r 's/, ?/\n/g' > tmp.txt
-            bak=`curl -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" "$CF_KV_API/$CFHOST_BAK"`
-            if [[ ! "$bak" == *error* ]] && [ ! -z "$bak" ] && [ ! "$bak" = "[]" ]; then
-              echo $bak|tr -d '[]'|sed -r 's/, ?/\n/g' >> tmp.txt
-              ret=`echo $ret$bak|sed 's/\]\[/,/'`
+          merge_backup(){
+            local key=$1 keybak=${1}_bak filename=$1.json
+            local ret=`curl -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" "$CF_KV_API/$key"`
+            if [[ "$ret" == *error* ]]; then
+              echo $ret;
+            elif [ ! -z "$ret" ] && [ ! "$ret" = "[]" ]; then
+              echo $ret|tr -d '[]'|sed -r 's/, ?/\n/g' > tmp.txt
+              local bak=`curl -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" "$CF_KV_API/$keybak"`
+              if [[ ! "$bak" == *error* ]] && [ ! -z "$bak" ] && [ ! "$bak" = "[]" ]; then
+                echo $bak|tr -d '[]'|sed -r 's/, ?/\n/g' >> tmp.txt
+                ret=`echo $ret$bak|sed 's/\]\[/,/'`
+              fi
+              echo `cat $filename`|tr -d '[]'|sed -r 's/, ?/\n/g' >> tmp.txt
+              echo [$(echo `cat tmp.txt|sort -u`|tr -s ' ' ',')] > $filename
+              #echo 'update_cfhost=true' >> $GITHUB_ENV
+              curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
+                -d "$ret" "$CF_KV_API/$CFHOST_BAK" >> $GITHUB_STEP_SUMMARY
             fi
-            echo `cat $CFHOSTJSON`|tr -d '[]'|sed -r 's/, ?/\n/g' >> tmp.txt
-            echo [$(echo `cat tmp.txt|sort -u`|tr -s ' ' ',')] > $CFHOSTJSON
-            #echo 'update_cfhost=true' >> $GITHUB_ENV
-            curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
-              -d "$ret" "$CF_KV_API/$CFHOST_BAK" >> $GITHUB_STEP_SUMMARY
-          fi
+          }
+          merge_backup $CFHOST
+          merge_backup $HOST
           
       - id: s2
         name: check change of cfhost.json, worker code
         env:
           GH_TOKEN: ${{ github.token }}
         run: |          
-          if ! git diff|grep $CFHOSTJSON; then
+          if ! git diff|grep "$CFHOSTJSON\|$HOSTJSON"; then
             # git config user.name "GitHub Actions Bot"
             # git config user.email "<>"
             # git add $CFHOSTJSON
             # git commit -m "updated cfhost"
             # git push
-            echo "cfhost not update" >> $GITHUB_STEP_SUMMARY
+            echo "cfhost and host not update" >> $GITHUB_STEP_SUMMARY
             if ! git diff --name-only ${{ github.event.before }} ${{ github.event.after }}|grep -v '\.git*' ; then
               echo "worker code nothing update" >> $GITHUB_STEP_SUMMARY
               gh run cancel ${{ github.run_id }}
@@ -113,7 +121,7 @@ jobs:
             
           curl -X POST -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
             -H 'Content-Type: multipart/form-data' \
-            --form "worker.js=@dist/$ENTRY;type=application/javascript+module" \
+            --form "worker.js=@dist/$ENTRY;type=application/javascript" \
             --form 'branch=test' \
             --form 'manifest={}' \
             --url $CF_PROJECT_API/$PROJECT/deployments | tail -n 4 >> $GITHUB_STEP_SUMMARY
